--- a/serv/tamplates/feedback.html
+++ b/serv/tamplates/feedback.html
@@ -10,7 +10,7 @@
             <label>№ тикета</label><br>
             <input type="number" name="tiket" /><br><br>
             <label>ФИО клиента</label><br>
-            <input type="number" name="fio" /><br><br>
+            <input type="text" name="fio" /><br><br>
             <label>Адрес</label><br>
             <input type="text" name="adr" /><br><br>
             <label>Неисправность</label><br>
