--- a/client/tamplates/index.html
+++ b/client/tamplates/index.html
@@ -63,11 +63,11 @@
                         <label for="exampleFormControlSelect1">Исполнитель (инженер)</label>
                         <select class="form-control" name="engineer">
                             <option>-</option>
-                            <option>Зенин В.В.</option>
-                            <option>Иванов А.А.</option>
-                            <option>Маншин Д.С.</option>
-                            <option>Петренко И.С.</option>
-                            <option>Шишкин С.О.</option>                    
+                            <option>Зенин</option>
+                            <option>Иванов</option>
+                            <option>Маншин</option>
+                            <option>Орлов</option>
+                                               
                         </select>
                     </div>
                     <div class="col">
