--- a/client/tamplates/index.html
+++ b/client/tamplates/index.html
@@ -69,11 +69,11 @@
                     <div class="col">
                         <label for="exampleFormControlSelect1">Исполнитель (инженер)</label>
                         <select class="form-control" name="engineer">
-                            <option>-</option>
-                            <option>Зенин</option>
-                            <option>Иванов</option>
-                            <option>Маншин</option>
-                            <option>Орлов</option>
+                            <option value=''>-</option>
+                            <option value='3'>Зенин</option>
+                            <option value='4'>Иванов</option>
+                            <option value='1'>Маншин</option>
+                            <option value='2'>Орлов</option>
                                                
                         </select>
                     </div>
