--- a/client/tamplates/index.html
+++ b/client/tamplates/index.html
@@ -74,6 +74,7 @@
                             <option value='4'>Иванов</option>
                             <option value='1'>Маншин</option>
                             <option value='2'>Орлов</option>
+                            <option value='5'>Мазур</option>
                                                
                         </select>
                     </div>
